just fix animation overflow

--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.border {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .border {
     position: absolute;
-    width: 150px;
-    height: 10px;
+    width: 185px;
+    height: 20px;
     background-color: red;
     border-radius: 25px;
     animation: move-around 5s infinite;
+    text-align: center;
+    color: white;
   }
   
   @keyframes move-around {
-    /* Keyframes with viewport-based positioning */
     0% {
       top: 0;
       left: 0;
@@ -21,18 +23,18 @@ body {
     }
     25% {
       top: 0;
-      left: 100%;
-      transform: translate(100%, 0);
+      left: 95%;
+      transform: translate(-50%, 0);
     }
     50% {
-      top: 100%;
-      left: 100%;
-      transform: translate(-100%, 100%);
+      top: 98.5%;
+      left: 95%;
+      transform: translate(-50%, -50%);
     }
     75% {
-      top: 100%;
+      top: 98.5%;
       left: 0;
-      transform: translate(0, -100%);
+      transform: translate(0, -50%);
     }
     100% {
       top: 0;
@@ -40,3 +42,4 @@ body {
       transform: translate(0, 0);
     }
   }
+  
